src/objects/Local_ERP_Loader__c.object
<CustomObject>
    <description>R3 - Object to hold the data which is used to do comparison with SAP data - (SAP data is compared with mapping table)</description>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <description>R3 - Field GUID Account reference data</description>
        <label>Account GUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Class__c</fullName>
        <description>R3 Application Class</description>
        <label>Application Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Description__c</fullName>
        <description>R3 Block Description</description>
        <label>Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 Customer Blocking Data Block</description>
        <label>Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_1__c</fullName>
        <description>R3 Business 1</description>
        <label>Business 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_2__c</fullName>
        <description>R3 Business 2</description>
        <label>Business 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_3__c</fullName>
        <description>R3 Business 3</description>
        <label>Business 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <description>R3 Channel Class</description>
        <label>Channel Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R3 - Country</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Information_Risk_class__c</fullName>
        <description>R3 Credit Information Risk class</description>
        <label>Risk Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Information__c</fullName>
        <description>R3 Credit Limit Information</description>
        <label>Credit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Blocking_Data_Deletion_Flag__c</fullName>
        <description>R3 Customer Blocking Data Deletion Flag</description>
        <label>Customer Blocking Data Deletion Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_allocation__c</fullName>
        <description>R3 Customer allocation</description>
        <label>Customer allocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <description>R3 - ERP ID</description>
        <label>ERP ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>R3 Industry Usage</description>
        <label>Industry Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadingBusinessPartnerSegment__c</fullName>
        <description>R3 LeadingBusinessPartnerSegment</description>
        <label>Leading Business Partner Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Channel__c</fullName>
        <description>R3 - Local Channel</description>
        <label>Local Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Customer_ID__c</fullName>
        <description>R3 - Local Customer ID</description>
        <label>Local Customer ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Main_Business__c</fullName>
        <description>R3 Local Main Business</description>
        <label>Local Main Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Segment__c</fullName>
        <description>R3 Local Segment</description>
        <label>Local Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Distribution_Channel__c</fullName>
        <description>R3 - Distribution Channel</description>
        <label>SAP Distribution Channel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Division__c</fullName>
        <description>R3 - field Division</description>
        <label>SAP Division</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Organization__c</fullName>
        <description>R3 - Sales Organization</description>
        <label>SAP Sales Organization</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <description>R3 Sales District</description>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>R3 Sales Office</description>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_1__c</fullName>
        <description>R3 - Sales Person 1</description>
        <label>Sales Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_2__c</fullName>
        <description>R3 - Sales Person 2</description>
        <label>Sales Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_3__c</fullName>
        <description>R3 - Sales Person</description>
        <label>Sales Person 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Sales_Force__c</fullName>
        <description>R3 Type of Sales Force</description>
        <label>Type of Salesforce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Local ERP Loader</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_GUID__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>SAP_Division__c</columns>
        <columns>SAP_Distribution_Channel__c</columns>
        <columns>SAP_Sales_Organization__c</columns>
        <columns>Country__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERP Data # - {0000000000}</displayFormat>
        <label>ERP Data Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local ERP Loader</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>